--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </div>
     <header class="header">
         <div class="header__logo-box">
-            <img src="/img/logo-white.png" alt="TourHut logo" class="header__logo">
+            <img src="img/logo-white.png" alt="TourHut logo" class="header__logo">
         </div>
 
         <div class="header__text-box">
